--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-a {
+@import "tailwindcss";
+/* a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
@@ -48,4 +49,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
